--- a/flavors/template-Exasol-all-python-3.10-conda/flavor_base/release/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10-conda/flavor_base/release/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM {flavor_customization}}
 
 ENV ENV_NAME="base"
 ENV MAMBA_ROOT_PREFIX="/opt/conda"
@@ -6,53 +6,10 @@ ENV MAMBA_EXE="/bin/micromamba"
 
 RUN mkdir /conf /buckets
 
-COPY --from={{language_deps}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
 COPY --from={{language_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{language_deps}} /var /var
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
 COPY --from={{language_deps}} /scripts /scripts
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-
-COPY --from={{flavor_customization}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /build_info /build_info
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /var /var
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /root /root
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN ldconfig
