--- a/flavors/template-Exasol-all-python-3.10/flavor_base/release/Dockerfile
+++ b/flavors/template-Exasol-all-python-3.10/flavor_base/release/Dockerfile
@@ -1,52 +1,11 @@
-FROM ubuntu:22.04
+FROM {{flavor_customization}}
 RUN mkdir /conf /buckets
-
-COPY --from={{language_deps}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 COPY --from={{language_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{language_deps}} /var /var
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
 COPY --from={{language_deps}} /scripts /scripts
 RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-
-COPY --from={{flavor_customization}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /build_info /build_info
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_customization}} /var /var
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
 
 RUN ldconfig
 
