Switched dependency of Release build-step from "language_deps" -> "flavor_base_deps"

--- a/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/release/Dockerfile
+++ b/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/release/Dockerfile
@@ -6,10 +6,10 @@ ENV MAMBA_EXE="/bin/micromamba"
 
 RUN mkdir -p /conf /buckets /nvidia/driver /nvidia/utils
 
-COPY --from={{language_deps}} /build_info /build_info
+COPY --from={{flavor_base_deps}} /build_info /build_info
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
-COPY --from={{language_deps}} /scripts /scripts
+COPY --from={{flavor_base_deps}} /scripts /scripts
 RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN ldconfig
