--- a/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
+++ b/flavors/test-Exasol-8-cuda-ml/flavor_base/release/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:22.04
+FROM {{flavor_base_deps}}
 
 ENV ENV_NAME="base"
 ENV MAMBA_ROOT_PREFIX="/opt/conda"
@@ -6,36 +6,6 @@ ENV MAMBA_EXE="/bin/micromamba"
 
 RUN mkdir -p /conf /buckets /nvidia/driver /nvidia/utils
 
-COPY --from={{language_deps}} /build_info /build_info
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{language_deps}} /scripts /scripts
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-
-COPY --from={{flavor_base_deps}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /build_info /build_info
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /var /var
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{flavor_base_deps}} /root /root
-RUN true # workaround for https://github.com/moby/moby/issues/37965
 
 RUN ldconfig
 
