Ignore trivy executable during security scan

--- a/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/security_scan/Dockerfile
+++ b/flavors/template-Exasol-8-python-3.10-cuda-conda/flavor_base/security_scan/Dockerfile
@@ -11,5 +11,6 @@ RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/secu
 ENV SECURITY_SCANNERS="trivy"
 COPY /security_scan/.trivyignore /.trivyignore
 COPY /security_scan/trivy.rego /trivy.rego
+COPY /security_scan/trivy.yaml /trivy.yaml
 
 ENTRYPOINT ["/scripts/security_scan/run.sh"]
