--- a/.github/workflows/slc_ci_prepare_test_container.yml
+++ b/.github/workflows/slc_ci_prepare_test_container.yml
@@ -20,7 +20,7 @@ jobs:
         with:
           submodules: 'recursive'
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@v1
+        uses: exasol/python-toolbox/.github/actions/python-environment@1.7.4
         with:
           python-version: '3.10'
       - name: Prepare test container
