--- a/.github/markdown_check_config.json
+++ b/.github/markdown_check_config.json
@@ -1,3 +1,8 @@
 {
-  "aliveStatusCodes": [429, 200]
+  "aliveStatusCodes": [429, 200],
+  "ignorePatterns": [
+    {
+      "pattern": "^http://www.swig.org"
+    }
+  ]
 }
