--- a/.github/workflows/slc_ci_test_slc.yml
+++ b/.github/workflows/slc_ci_test_slc.yml
@@ -70,6 +70,10 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Run nvidia-smi
+        if: ${{ contains(matrix.test-runner, 'gpu') }}
+        run: nvidia-smi
+
       - name: Download SLC ${{matrix.goal}}
         id: download-slc
         uses: actions/download-artifact@v4
