--- a/exaudfclient/base/exaudflib/test/BUILD
+++ b/exaudfclient/base/exaudflib/test/BUILD
@@ -2,7 +2,7 @@ cc_test(
     name = "exaudflib-test",
     srcs = ["script_data_transfer_objects_test.cpp"],
     deps = [
-        "//base/exaudflib:script_data_transfer_objects",
+        "//exaudflib:script_data_transfer_objects",
         "@googletest//:gtest_main",
     ],
 )
