--- a/exaudfclient/base/script_options_parser/ctpg/BUILD
+++ b/exaudfclient/base/script_options_parser/ctpg/BUILD
@@ -4,6 +4,6 @@ cc_library(
     name = "script_option_lines_parser_ctpg",
     hdrs = ["script_option_lines_ctpg.h"],
     srcs = ["script_option_lines_ctpg.cc","ctpg.hpp"],
-    deps = ["//base/script_options_parser:exception"],
+    deps = ["//script_options_parser:exception"],
     copts= ["-fno-lto"],
 )
