--- a/exaudfclient/base/MODULE.bazel
+++ b/exaudfclient/base/MODULE.bazel
@@ -1,7 +1,7 @@
-module(name="exaudfclient", version = "1.0")
+module(name="exaudfclient_base", version = "1.0")
 
-bazel_dep(name = "exaudfclient_base", version = "1.0.0")
-local_path_override(module_name="exaudfclient_base", path="base")
+bazel_dep(name = "bazel_skylib", version = "1.7.1")
+bazel_dep(name = "googletest", version = "1.15.0")
 bazel_dep(name = "rules_jvm_external", version = "6.2")
 
 numpy_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "numpy_local_repository")
