Fixed shared library path

--- a/exaudfclient/.bazelrc
+++ b/exaudfclient/.bazelrc
@@ -3,7 +3,7 @@ build --lockfile_mode=off --copt='-std=c++17' --force_pic --action_env=PROTOBUF_
 build:benchmark --define benchmark=true
 build:java  --define java=true --action_env=JAVA_PREFIX
 build:python --define python=true --action_env=NUMPY_PREFIX --action_env=PYTHON3_SYSPATH --action_env=PYTHON3_PREFIX --action_env=PYTHON3_VERSION
-build:fast-binary --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/external/exaudfclient_base+/libexaudflib_complete.so"' --define binary_type=fast_binary //:exaudfclient
+build:fast-binary --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/external/exaudfclient_base~/libexaudflib_complete.so"' --define binary_type=fast_binary //:exaudfclient
 build:slow-wrapper --define binary_type=slow_wrapper //:exaudfclient
 build:static-binary //:exaudfclient_static
 build:test-binaries --config=static-binary --config=slow-wrapper
