Added workaround for java rules

--- a/exaudfclient/base/MODULE.bazel
+++ b/exaudfclient/base/MODULE.bazel
@@ -3,6 +3,12 @@ module(name="exaudfclient_base", version = "1.0")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "googletest", version = "1.15.0")
 bazel_dep(name = "rules_jvm_external", version = "6.2")
+bazel_dep(name = "rules_python", version = "1.7.0")
+
+python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+python.defaults(python_version = "3.11")
+python.toolchain(python_version = "3.11", ignore_root_user_error = True,)
+
 
 numpy_local_repository = use_repo_rule("@exaudfclient_base//:python_repository.bzl", "numpy_local_repository")
 numpy_local_repository(name = "numpy")
@@ -18,15 +24,3 @@ protobuf_local_repository(name = "protobuf")
 
 java_local_repository = use_repo_rule("@exaudfclient_base//:java_repository.bzl", "java_local_repository")
 java_local_repository(name = "java")
-
-
-maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
-maven.install(
-    artifacts = [
-        "com.exasol:udf-api-java:1.0.5",
-    ],
-    repositories = [
-        "https://repo1.maven.org/maven2",
-    ],
-)
-use_repo(maven, "maven")
