Update lock file

--- a/.github/workflows/slc_ci_flavor.yml
+++ b/.github/workflows/slc_ci_flavor.yml
@@ -13,9 +13,9 @@ on:
           required: true
           type: string
     secrets:
-      DOCKER_USERNAME:
+      CI4_DOCKERHUB_USERNAME:
           required: true
-      DOCKER_PASSWORD:
+      CI4_DOCKERHUB_TOKEN:
           required: true
 
 
