--- a/.github/workflows/slc_ci_test_slc.yml
+++ b/.github/workflows/slc_ci_test_slc.yml
@@ -13,9 +13,9 @@ on:
           required: true
           type: string
     secrets:
-      DOCKER_USERNAME:
+      CI4_DOCKERHUB_USERNAME:
         required: true
-      DOCKER_PASSWORD:
+      CI4_DOCKERHUB_TOKEN:
         required: true
 jobs:
   detect-test-matrix:
@@ -88,15 +88,15 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
           poetry run -- exaslc-ci run-tests --flavor "$FLAVOR" --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD"  --test-set-name "$TEST_SET_NAME" --slc-directory "$SLC_DIRECTORY" --commit-sha "$COMMIT_SHA"
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.CI4_DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.CI4_DOCKERHUB_TOKEN }}
           FLAVOR: ${{ inputs.flavor }}
           TEST_SET_NAME: ${{ matrix.test-set-name }}
           SLC_DIRECTORY: ${{ steps.download-slc.outputs.download-path }}
           COMMIT_SHA: ${{github.sha}}
 
       - name: Check for password
-        run: grep -rq ${{ secrets.DOCKER_PASSWORD }} .build_output && exit 1 || exit 0
+        run: grep -rq ${{ secrets.CI4_DOCKERHUB_TOKEN }} .build_output && exit 1 || exit 0
 
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
