--- a/.github/workflows/slc_ci_build_slc.yml
+++ b/.github/workflows/slc_ci_build_slc.yml
@@ -18,9 +18,9 @@ on:
           type: string
 
     secrets:
-      DOCKER_USERNAME:
+      CI4_DOCKERHUB_USERNAME:
         required: true
-      DOCKER_PASSWORD:
+      CI4_DOCKERHUB_TOKEN:
         required: true
 
 jobs:
@@ -77,15 +77,15 @@ jobs:
           echo "$DOCKER_PASSWORD" | docker login --username "$DOCKER_USERNAME" --password-stdin
           poetry run -- exaslc-ci export-and-scan-vulnerabilities --flavor "$FLAVOR" --branch-name "$BRANCH_NAME" --commit-sha "$COMMIT_SHA" --docker-user "$DOCKER_USERNAME" --docker-password "$DOCKER_PASSWORD" --github-output-var slc_paths --build-mode "$BUILD_MODE"
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.CI4_DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.CI4_DOCKERHUB_TOKEN }}
           BRANCH_NAME: ${{github.head_ref || github.ref}}
           COMMIT_SHA: ${{github.sha}}
           FLAVOR: ${{inputs.flavor}}
           BUILD_MODE: ${{inputs.build-mode}}
 
       - name: Check for password
-        run: grep -rq ${{ secrets.DOCKER_PASSWORD }} .build_output && exit 1 || exit 0
+        run: grep -rq ${{ secrets.CI4_DOCKERHUB_TOKEN }} .build_output && exit 1 || exit 0
 
       - uses: actions/upload-artifact@v4
         if: ${{ always() }}
