Fixed comments from review

--- a/exaudfclient/MODULE.bazel
+++ b/exaudfclient/MODULE.bazel
@@ -1,6 +1,8 @@
 module(name="exaudfclient", version = "1.0")
 
 bazel_dep(name = "exaudfclient_base", version = "1.0.0")
+#For now, the Bazel Modul "exaudfclient_base" is stored in subdirectory "base".
+#Later we might fetch it via Http or Git (after splitting up script-languages repository)
 local_path_override(module_name="exaudfclient_base", path="base")
 bazel_dep(name = "rules_jvm_external", version = "6.2")
 
