--- a/.github/workflows/slc_ci_self_check.yml
+++ b/.github/workflows/slc_ci_self_check.yml
@@ -20,12 +20,13 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - name: SCM Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@v1
+        uses: exasol/python-toolbox/.github/actions/python-environment@v5
         with:
           python-version: "3.10"
+          poetry-version: "2.3.0"
 
       - name: Update Github workflow files
         run: poetry run -- nox -s update-ci-github-workflows
