--- a/.github/workflows/slc_ci.yml
+++ b/.github/workflows/slc_ci.yml
@@ -23,15 +23,19 @@ jobs:
     needs: prepare-test-container
     runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
           submodules: 'recursive'
+
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@v1
+        uses: exasol/python-toolbox/.github/actions/python-environment@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+          poetry-version: "2.3.0"
+
       - id: set-matrix
         run: poetry run -- exaslc-ci get-flavors --github-output-var matrix
+
     outputs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
 
