--- a/.github/workflows/slc_ci_check_for_build.yml
+++ b/.github/workflows/slc_ci_check_for_build.yml
@@ -22,23 +22,25 @@ jobs:
     runs-on: ubuntu-24.04
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         if: ${{ github.event_name == 'pull_request' }}
         with:
           fetch-depth: 0
           submodules: 'recursive'
           ref: ${{ github.event.pull_request.head.sha }}
 
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         if: ${{ github.event_name != 'pull_request' }}
         with:
           fetch-depth: 0
           submodules: 'recursive'
 
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@v1
+        uses: exasol/python-toolbox/.github/actions/python-environment@v5
         with:
           python-version: "3.10"
+          poetry-version: "2.3.0"
+
       - name: Run check
         id: run-check
         run: |
