--- a/.github/workflows/slc_ci_test_slc.yml
+++ b/.github/workflows/slc_ci_test_slc.yml
@@ -21,20 +21,23 @@ jobs:
   detect-test-matrix:
     runs-on: ubuntu-22.04
     steps:
-     - uses: actions/checkout@v4
+     - uses: actions/checkout@v6
        with:
           submodules: 'recursive'
 
      - name: Setup Python & Poetry Environment
-       uses: exasol/python-toolbox/.github/actions/python-environment@v1
+       uses: exasol/python-toolbox/.github/actions/python-environment@v5
        with:
-         python-version: '3.10'
+          python-version: "3.10"
+          poetry-version: "2.3.0"
+
      - name: Detect Test Matrix
        id: detect-test-matrix
        run: |
          poetry run -- exaslc-ci get-test-matrix --flavor "$FLAVOR" --github-output-var test_matrix
        env:
          FLAVOR: ${{ inputs.flavor }}
+
     outputs:
      test-matrix: ${{ steps.detect-test-matrix.outputs.test_matrix }}
 
@@ -47,7 +50,7 @@ jobs:
       matrix: ${{fromJson(needs.detect-test-matrix.outputs.test-matrix)}}
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v6
         with:
             submodules: 'recursive'
 
@@ -56,6 +59,7 @@ jobs:
         with:
           tool-cache: true
           large-packages: false
+
       - name: Free disk space by removing large directories
         run: |
           sudo rm -rf /usr/local/graalvm/
@@ -66,13 +70,14 @@ jobs:
           sudo rm -rf /opt/ghc
 
       - name: Setup Python & Poetry Environment
-        uses: exasol/python-toolbox/.github/actions/python-environment@v1
+        uses: exasol/python-toolbox/.github/actions/python-environment@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
+          poetry-version: "2.3.0"
 
       - name: Download SLC ${{matrix.goal}}
         id: download-slc
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@v7
         with:
           name: slc-${{inputs.flavor}}-${{matrix.goal}}
           path: "slc"
@@ -98,7 +103,7 @@ jobs:
       - name: Check for password
         run: grep -rq ${{ secrets.CI4_DOCKERHUB_TOKEN }} .build_output && exit 1 || exit 0
 
-      - uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v6
         if: ${{ always() }}
         name: Upload log artifacts
         with:
